--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest --experimental-vm-modules",
-    "test:watch": "jest --watch --experimental-vm-modules",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules\" jest",
+    "test:watch": "cross-env NODE_OPTIONS=\"--experimental-vm-modules\" jest --watch",
     "seed": "node scripts/seed.js",
     "sync-users": "node scripts/syncFirestoreUsersToMongo.js"
   },
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.28.3",
     "@eslint/js": "^9.35.0",
     "babel-jest": "^30.1.2",
+    "cross-env": "^10.0.0",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
