--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,18 @@ PORT=5000
 # Replace the placeholder with your MongoDB Atlas connection string
 MONGODB_URI=mongodb+srv://<username>:<password>@<cluster-url>/<dbName>?retryWrites=true&w=majority&appName=<appName>
 
+# Razorpay Configuration
+# Get these from Razorpay Dashboard > Settings > API Keys
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+
+# Email Configuration (for sending payment success emails)
+# For Gmail: Use App Password (not regular password)
+# Generate at: https://myaccount.google.com/apppasswords
+EMAIL_SERVICE=gmail
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password_here
+
 # Firebase Admin SDK Configuration
 # Get these from Firebase Console > Project Settings > Service Accounts
 FIREBASE_PROJECT_ID=your-firebase-project-id
