--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^13.5.0",
     "mongoose": "^8.18.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.6",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
