--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^13.5.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "razorpay": "^2.9.6"
   },
