--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
